tests/purs/failing/DuplicateTypeVars.purs
-- @shouldFailWith DuplicateTypeArgument
module Main where

import Prelude

type Foo a a = a
