tests/purs/failing/DuplicateTypeVars.out
Error found:
in module [33mMain[0m
at tests/purs/failing/DuplicateTypeVars.purs:6:1 - 6:17 (line 6, column 1 - line 6, column 17)

  Type argument [33ma[0m appears more than once.

in type synonym [33mFoo[0m

See https://github.com/purescript/documentation/blob/master/errors/DuplicateTypeArgument.md for more information,
or to contribute content related to this error.

